# DnD

./: CMakeLists.txt  copy.cmake
asset/shader/: default_fragment_shader.glsl  vshader.glsl
assets/json/: race.json
assets/shader/: default_vertex_shader.glsl  fshader.glsl
include/: Camera.h  DND.h  File.h  Scene.h  Texture.h  demoScene.h  gameplayScene.h  shader.h  window.h
include/ECS/: ECS.hpp
src/: CMakeLists.txt  main.cpp
src/D&D/: CMakeLists.txt  window.cpp
src/D&D/Scene/: CMakeLists.txt  demoScene.cpp  gameplayScene.cpp
src/D&D/core/: CMakeLists.txt  DND_build.cpp  DND_setup.cpp
src/renderer/: CMakeLists.txt  Texture.cpp  shader.cpp
src/util/: CMakeLists.txt  Camera.cpp  File.cpp
